# ros-mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  local-proxy.js  pyproject.toml  server.json  server.py
.claude/: settings.local.json
.claude/agents/: ros-mcp-validator.md
.claude/skills/ros-mcp/: SKILL.md
.github/workflows/: build-push.yml  deploy.yml
dashboard/: README.md  index.html  mqtt-webmcp.js  package-lock.json  package.json  ros-webmcp.js  style.css
dashboard/.claude/: settings.local.json
docker/: Dockerfile.mcp  Dockerfile.rosbridge  Dockerfile.turtlesim  README.md  cyclonedds.xml  docker-compose.isaac-sim.yml  docker-compose.yml  entrypoint.sh  launch_turtlesim.launch.py
docs/: tools.md
firmware/esp32_led/: esp32_led.ino
robots/: nova_carter.yaml
src/ros_mcp/: __init__.py  integration.py  server.py
src/ros_mcp/tools/: __init__.py  actions.py  connection.py  images.py  nodes.py  parameters.py  robot_config.py  services.py  topics.py
src/ros_mcp/utils/: config.py  network.py  websocket.py
