[project]
name = "ros-mcp"
version = "3.0.1"
description = "Connect AI Language Models with Robots on ROS using MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "jonasneves", email = "jonasneves@users.noreply.github.com" }
]


dependencies = [
    "fastmcp>=2.11.3",
    "jsonschema>=4.25.1",
    "mcp[cli]>=1.13.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
ros-mcp = "ros_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
packages = ["ros_mcp", "ros_mcp.tools", "ros_mcp.utils"]

[tool.setuptools.data-files]
"." = ["server.json"]
"robots" = ["robots/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

# MCP Registry validation - required for PyPI package verification
[tool.mcp]
name = "io.github.jonasneves/ros-mcp"
